--- a/app/scss/vars.scss
+++ b/app/scss/vars.scss
@@ -12,6 +12,7 @@ $accent-orange-40: rgba(247, 126, 62, 0.4);
 $second-fading-red: rgb(130, 66, 77);
 $second-fading-red-20: rgba(130, 66, 77, 0.2);
 $second-gray: rgb(147, 147, 147);
+$second-bg-blur: rgba(29, 24, 24, 0.5);
 
 $service-mistake: rgb(225, 4, 78); 
 
