--- a/app/components/_header.html
+++ b/app/components/_header.html
@@ -7,7 +7,7 @@
                 <li class="navbar__item"><a href="index.html#faq">FAQ</a></li>
                 <li class="navbar__item"><a href="#footer">Контакты</a></li>
             </ul>
-            <a href="index.html"><img class="navbar__logo" src="images/logo.png" alt="logo"></a>
+            <a href="index.html"><img class="navbar__logo" src="images/logo.avif" alt="logo"></a>
             <div class="navbar__info">
                 <form>
                     <input class="navbar__input line-input" type="search" placeholder="Введите ключевое слово">
