add signin signup

--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -39,6 +39,11 @@ html {
 	border-radius: 10px;
 	display: block;
 
+	&::placeholder {
+		color: $second-gray;
+		@include inscription-text
+	}
+
 	&:focus {
 		outline: none;
 	}
