--- a/app/components/_footer.html
+++ b/app/components/_footer.html
@@ -12,7 +12,7 @@
                 <h5 class="footer__nav-title">Навигация</h5>
                 <ul class="footer__nav-list">
                     <li class="footer__nav-item"><a href="about.html">О компании</a></li>
-                    <li class="footer__nav-item"><a href="cataloh.html">Каталог</a></li>
+                    <li class="footer__nav-item"><a href="catalog.html">Каталог</a></li>
                     <li class="footer__nav-item"><a href="#faq">FAQ</a></li>
                     <li class="footer__nav-item"><a href="about.html#">Видеогалерея</a></li>
                 </ul>
