--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -27,6 +27,7 @@ html {
 
 	@media (max-width: 1230px) {
 		max-width: 1024px;
+		padding-inline: 12px;
 	}
 
 	@media (max-width: 977px) {
@@ -73,12 +74,18 @@ input[type="search"]::-webkit-search-results-decoration {
 	margin-top: -70px;
     border-radius: 70px 70px 0px 0px;
     background: $main-white;
+
+	@media (max-width: 610px) {
+		border-radius: 10px 10px 0 0;
+        margin-top: -10px;
+	}
 }
 
 .btn {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 	padding: 20px 40px;
 	background: $main-dark;
 	border: none;
@@ -104,7 +111,7 @@ input[type="search"]::-webkit-search-results-decoration {
 		cursor: default;
 	}
 
-	@media (max-width:610px) {
+	@media (max-width: 610px) {
 		padding: 14px 4px;
 	}
 }
@@ -113,6 +120,7 @@ input[type="search"]::-webkit-search-results-decoration {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
 	padding: 16px 36px;
 	background: $main-white;
 	border: 4px solid transparent;
@@ -121,6 +129,11 @@ input[type="search"]::-webkit-search-results-decoration {
 	@include btn-text;
 	color: $main-dark;
 	transition: .3s;
+
+	@media (max-width: 610px) {
+		padding: 14px 4px;
+		border: 2px solid transparent;
+	}
 
 	&:hover {
 		border-color: $accent-orange;
@@ -170,6 +183,61 @@ input[type="search"]::-webkit-search-results-decoration {
 
 	span {
 		color: $accent-red;
+	}
+}
+
+@media (min-width: 611px) {
+	.breadcrumbs {
+		.breadcrumbs-item-mob {
+			display: none;
+		}
+	}
+}
+
+@media (max-width: 610px) {
+	.breadcrumbs {
+		position: relative;
+		background-image: url("./../images/top-bar.svg");
+		background-repeat: no-repeat;
+		background-size: 100% 106px;
+		height: 106px;
+		align-items: center;
+		justify-content: center;
+
+		.breadcrumbs-item-lg {
+			display: none;
+		}
+
+		&>* {
+			margin: 0;
+		}
+
+		.breadcrumbs-back-btn {
+			position: absolute;
+			left: 16px;
+			top: 24px;
+			transform: rotate(-90deg);
+		}
+
+		span {
+			color: inherit;
+			max-width: 255px;
+			text-align: center;
+			-webkit-line-clamp: 2;
+			display: -webkit-box;
+			-webkit-box-orient: vertical;
+			overflow: hidden;
+
+			font-size: 18px;
+			font-weight: 500;
+			line-height: 22px;
+		}
+	}
+
+	.container {
+		.breadcrumbs {
+			margin-inline: -16px;
+		}
 	}
 }
 
@@ -239,11 +307,11 @@ input[type="search"]::-webkit-search-results-decoration {
 		display: flex;
 		flex-direction: column;
 		transition: 0.5s all;
-		transform: translateX(70%);	
+		transform: translateX(70%);
 
 		&.active {
     		transition: 0.5s all;
-			transform: translateX(0);	
+			transform: translateX(0);
 		}
 	}
 
@@ -284,6 +352,11 @@ input[type="search"]::-webkit-search-results-decoration {
 
 .popup__btn {
 	border-color: $second-gray;
+
+	@media (max-width: 610px) {
+		border-color: $main-dark;
+		padding: 12px 4px;
+	}
 }
 
 .close-popup {
@@ -296,6 +369,14 @@ input[type="search"]::-webkit-search-results-decoration {
 
 	.header {
 		padding-right: 17px;
+
+		@media (max-width: 977px) {
+			padding: 0;
+		}
+	}
+
+	@media (max-width: 977px) {
+		padding: 0;
 	}
 }
 
@@ -336,12 +417,3 @@ input[type="search"]::-webkit-search-results-decoration {
 	border-color: $second-fading-red-20;
 	background: $second-fading-red-20;
 }
-
-
-// media
-
-
-
-
-
-
