--- a/app/scss/media.scss
+++ b/app/scss/media.scss
@@ -71,6 +71,14 @@
     }
 }
 
+@media (max-width: 343px) {
+    .navbar {
+        .navbar-popup__content {
+            width: 100%;
+        }
+    }
+}
+
 @media (max-width: 610px) {
 
 // header
@@ -80,6 +88,10 @@
         .navbar__logo {
             order: 0;
             flex-shrink: 0;
+
+            img {
+                width: 47px;
+            }
         }
 
         .navbar__info {
@@ -174,18 +186,12 @@
 
     }
 
-
-    .mini-catalog__list {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-
 // main 
 
 // heading
 
     .heading {
-        margin-top: 145px;
+        margin-top: 114px;
     }
 
     .heading__title {
@@ -273,27 +279,6 @@
             }
         }
 
-    
-        // &__benefit:nth-child(1) {
-        //     grid-column: 1 / 2;
-        // }
-
-        // &__benefit:nth-child(2) {
-        //     grid-column: 2 / 3;
-        // }
-
-        // &__benefit:nth-child(3) {
-        //     grid-column: 1 / 2;
-        // }
-
-        // &__benefit:nth-child(4) {
-        //     grid-column: 2 / 3;
-        // }
-
-        // &__benefit:nth-child(5) {
-        //     grid-column: 1 / 2;
-        // }
-
         &__benefits::after {
             display: none;
         }
@@ -305,5 +290,751 @@
     .mini-catalog {
         border-radius: 10px 10px 0 0;
         margin-top: -10px;
+        padding-block: 32px;
+
+        &__title::after {
+            display: none;
+        }
+
+        &__list {
+            padding-inline: 16px;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 10px;
+            margin-top: 16px;
+        }
+
+        &__item {
+            height: 82px;
+        }
+
+        &__btn {
+            margin-top: 16px;
+        }
     }
+
+
+// faq
+
+    .faq {
+        margin-block: 32px;
+
+        &__title::after {
+            display: none;
+        }
+
+        .faq-accordion {
+            margin-top: 16px;
+
+            &__title {
+                align-items: center;
+                padding: 9px 0;
+
+                &:hover {
+                    background: none;
+                }
+
+                h4 {
+                    @include btn-text;
+                }
+            }
+
+            &__icon {
+                max-width: 40px;
+            }
+
+            &__text {
+                padding: 0;
+            }
+        }
+    }
+
+
+// about-page
+
+    .about-page {
+        .heading__title {
+            padding: 24px 0 0 0;
+
+            h2:after {
+                display: none;
+            }
+        }
+
+        .about {
+            .breadcrumbs {
+                display: none;
+            }
+
+            .about__text br:nth-child(2) {
+                display: block;
+            }
+
+            .about-wrapper {
+                padding-block: 40px 0;
+            }
+
+            .about__benefit {
+                width: 100%;
+                height: 57px;
+                padding-inline: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+    
+                @include main-mini-text;
+            }
+    
+            .about__btn-catalog {
+                width: 100%;
+                margin-top: 6px;
+            }
+        }
+    }
+
+    .video-gallery {
+        padding-block: 32px;
+
+        &__title::after {
+            display: none;
+        }
+
+        .video {
+            margin-top: 32px;
+
+            &__desc {
+                margin-top: 8px;
+            }
+
+            &__link {
+                margin-top: 16px;
+                width: 100%;
+                aspect-ratio: 16 / 9;
+                height: auto;
+            }
+
+            &__products {
+                margin-top: 16px;
+
+                ul {
+                    margin-top: 10px;
+                    flex-direction: column;
+                    gap: 10px;
+
+                    li {
+                        margin: 0;
+                    }
+                }
+            }
+        }
+
+        .btn {
+            margin-top: 16px;
+        }
+    }
+
+
+// catalog-page
+
+    .catalog-page .heading__title,
+    .catalog-page .heading__substrate,
+    .catalog-page .about-wrapper.container-grid {
+        display: none;
+    }
+
+    .catalog-page {
+        .about {
+            padding: 0;
+            background-color: transparent;
+        }
+
+        .breadcrumbs.container {
+            margin: 0;
+        }
+
+        .top-rounded {
+            margin-top: 0;
+        }
+    }
+
+    .catalog {
+        padding-block: 0 32px;
+
+        .catalog-filter {
+            &__btn {
+                span {
+                    display: none;
+                }
+            }
+        }
+
+        &-wrapper {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+            row-gap: 32px;
+
+            .categories-list,
+            .catalog__list {
+                grid-column: 1;
+            }
+
+            .categories-list {
+                display: flex;
+                gap: 8px;
+                overflow-x: scroll;
+                scroll-snap-type: x mandatory;
+
+                .category-item {
+                    margin: 0;
+                    
+                    a {
+                        scroll-snap-align: start;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        height: 82px;  
+                        min-width: 167px;
+                        padding: 20px;
+                        text-align: center;
+                        background: $main-light-orange-20;
+                        border-right: 5px solid $main-light-orange;
+                        border-bottom: 5px solid $main-light-orange;
+                        border-radius: 10px;
+                    }
+                }
+            }
+
+            .catalog__list {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 32px 10px;
+            }
+        }
+    }
+
+    .card {
+        &__img {
+            max-height: 180px;
+        }
+
+        &__count {
+            display: none;
+        }
+
+        &__title, &__price,
+        &__discount {
+            @include main-text;
+            margin-top: 12px;
+        }
+
+        &__new-price {
+            @include main-text;
+        }
+
+        &__btns {
+            margin-top: 12px;
+        }
+
+        &__old-price {
+            display: none;
+        }
+    }
+
+    .filter-popup {
+        height: calc(100svh - 50px);
+
+        &__header {
+            background-color: $main-light-orange;
+			justify-content: space-between;
+			padding: 13px 16px;
+			border-radius: 10px 10px 0 0;
+
+            h5 {	
+                flex: 0 0 auto;
+            }
+        }
+
+        &__content {
+            width: 100vw;
+			height: auto;
+			top: unset;
+			bottom: 0;
+			transform: translateX(0);		
+			transform: translateY(70%);
+			padding: 0;
+			border-radius: 10px 10px 0 0;
+
+            &.active {
+                transform: translateY(0);
+            }
+        }
+
+        &__body {
+            margin: 0;
+            max-height: calc(100dvh - 288px);
+			padding: 32px 16px 0 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+
+        &__footer {
+			padding-top: 0;
+
+            .popup__btns {
+                flex-direction: column;
+				padding: 32px 16px;
+            }
+        }
+
+        &__price {
+            display: contents;
+
+            .product-accordion__title {
+                pointer-events: none;
+            }
+
+            .product-accordion__icon {
+                display: none;
+            }
+
+            .product-accordion__text {
+                max-height: 42px;
+                margin-top: 6px;
+            }
+
+            .filter-price {
+                gap: 15px;
+                justify-content: space-between;
+
+                span:not(:nth-child(3)) {
+                    display: none;
+                }
+
+                .line-input {
+                    max-width: 42%;
+                }
+            }
+        }
+
+        .product-accordion {
+            &__item {
+                border: 1px solid $main-dark;
+                border-radius: 10px;
+                padding: 22px 18px;
+            }
+    
+            &__icon {
+                transform: rotate(-90deg);
+            }
+        }
+    }
+
+// cart-popup
+
+    .cart-popup {
+        height: calc(100svh - 50px);
+
+        &__header {
+            background-color: $main-light-orange;
+            justify-content: space-between;
+            padding: 13px 16px;
+            border-radius: 10px 10px 0 0;
+
+            h5 {	
+                flex: 0 0 auto;
+            }
+        }
+
+        &__content {
+            width: 100vw;
+            height: auto;
+            top: unset;
+            bottom: 0;
+            transform: translateX(0);		
+            transform: translateY(70%);
+            padding: 0;
+            border-radius: 10px 10px 0 0;
+
+            &.active {
+                transform: translateY(0);
+            }
+        }
+
+        &__body {
+            margin: 0;
+            max-height: calc(100dvh - 330px);
+            padding: 32px 16px 0 16px;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+
+        &__footer {
+            padding-top: 0;
+
+            .popup__btns {
+                flex-direction: column;
+                padding: 32px 16px;
+            }
+        }
+
+        &__price {
+            display: contents;
+
+            .product-accordion__title {
+                pointer-events: none;
+            }
+
+            .product-accordion__icon {
+                display: none;
+            }
+
+            .product-accordion__text {
+                max-height: 42px;
+                margin-top: 6px;
+            }
+
+            .filter-price {
+                gap: 15px;
+                justify-content: space-between;
+
+                span:not(:nth-child(3)) {
+                    display: none;
+                }
+
+                .line-input {
+                    max-width: 42%;
+                }
+            }
+        }
+
+        .cart-total-price {
+            margin-bottom: 0;
+            padding: 20px 16px 0 16px;
+            justify-content: space-between;
+        }
+
+        .cart-card {
+            &__body {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+            }
+
+            .card__count {
+                display: flex;
+            }
+        }
+    }
+
+    .cart-total-price span {
+        @include main-text;
+    }
+
+
+// category page
+
+    .category-page {
+        .catalog {
+            padding-block: 114px 32px;
+
+            .btn-outline-dark {
+                margin-top: 32px;
+            }
+        }
+
+        .subcategories {
+            margin-top: 32px;
+            flex-wrap: nowrap;
+            gap: 8px;
+            overflow-x: scroll;
+            scroll-snap-type: x mandatory;
+
+            .subcategory {
+                scroll-snap-align: start;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 64px;  
+                min-width: 124px;
+                padding: 20px;
+                text-align: center;
+                @include main-text;
+            }
+        }
+
+        .catalog-wrapper {
+            margin-top: 32px;
+
+            .categories-list {
+                display: none;
+            }
+        }
+    }
+
+
+// product page 
+
+    .product-page {
+        padding-block: 114px 32px;
+        .catalog {
+            padding: 0;
+        }
+
+        .product__title {
+            display: none;
+        }
+
+        .product-wrapper {
+            margin-top: 32px;
+            flex-direction: column;
+            gap: 16px;
+
+            .product__img {
+                flex: unset;
+                height: 380px;
+            }
+        }
+
+        .product-specification {
+            position: relative;
+
+            .product-number {
+                flex-direction: column;
+                align-items: end;
+                gap: 16px;
+            }
+
+            .product__price {
+                margin: 0;
+                position: absolute;
+                top: 0;
+            }
+
+            .product__btns {
+                margin-top: 16px;
+            }
+
+            .product-accordion {
+                margin: 0;
+                padding-block: 32px;
+            }
+        }
+
+        .recommended {
+            margin-top: 32px;
+
+            .recommended-products {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .card__title {
+                margin-top: 12px;
+            }
+
+            .card__price {
+                margin-top: 6px;
+                @include main-text;
+            }
+
+            .card__discount {
+                margin-top: 6px;
+            }
+
+            .card__new-price {
+                margin-inline: 0 6px;
+            }
+        }
+    }
+}
+
+@media (max-width: 977px) {
+
+//  cart-page 
+
+    .cart-card {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 16px 10px;
+
+        .cart-card__img {
+            width: 167px;
+        }
+
+        &__body {
+            display: contents;
+        }
+
+        .card__discount {
+            flex-wrap: wrap;
+            gap: 8px;
+        }
+
+        .card__btns {
+            grid-column: 1 / 3;
+
+            .card__count {
+                flex-grow: 1;
+                gap: 12px;
+                align-items: center;
+
+                span {
+                    margin: 0;
+                    border: 3px solid rgb(29, 24, 24);
+                    border-radius: 10px;
+                    padding: 6px 26px;
+                }
+
+                a {
+                    max-height: 40px;
+
+                    svg {
+                        width: 40px;
+                        height: 40px;
+                    }
+                }
+
+                .cart-card__del {
+                    svg {
+                        width: 30px;
+                        height: 30px;
+                    }
+                }
+            }
+
+            .cart-card__del {
+                flex: 1 0 auto;
+                margin: 0;
+                display: flex;
+                justify-content: end;
+            }
+        }
+    }
+
+    .cart-body__wrapper {
+        gap: 15px;
+    }
+
+    .cart-body__wrapper .cart-products .cart-card__body {
+        display: contents;        
+    }
+}
+
+@media (max-width: 840px) and (min-width: 611px) {
+    .cart-body {
+        padding-inline: 100px;
+    }
+
+    .cart-body__wrapper {
+        grid-template-columns: 1fr;
+
+        .cart-products, .cart-payment {
+            grid-column: 1;
+        }
+    }
+
+    .cart-popup {
+        .cart-card {
+            padding-right: 32px;
+        }
+    }
+}
+
+@media (max-width: 610px) {
+    .cart-page {
+        .heading__title {
+            h2::after {
+                display: none;
+            }
+        }
+
+        .cart-body {
+            padding-block: 32px;
+    
+            &__title {
+                display: none;
+            }
+        }
+
+        .cart-card {
+            .card__price {
+                @include btn-text;
+            }
+
+            .card__discount {
+                &>* {
+                    @include btn-text;
+                }
+
+                &-percent {
+                    @include main-text;
+                }
+
+                flex-direction: column;
+
+                .card__old-price {
+                    display: block;
+                }
+
+                .card__discount-percent {
+                    max-width: 43px;
+                    justify-content: center;
+                }
+            }
+
+            .card__count {
+                display: flex;
+            }
+        }
+    }
+
+
+    .cart-body__wrapper {
+        grid-template-columns: 1fr;
+
+        .cart-products, .cart-payment {
+            grid-column: 1;
+        }
+
+        .cart-payment {
+            padding: 20px 41px;
+        }
+
+        .cart-payment__title {
+            display: none;
+        }
+    }
+
+    .cart-popup {
+        .cart-card__body {
+            display: contents;
+        }
+
+        .cart-card {
+            .card__price {
+                @include btn-text;
+            }
+
+            .card__discount {
+                &>* {
+                    @include btn-text;
+                }
+
+                &-percent {
+                    @include main-text;
+                }
+
+                flex-direction: column;
+
+                .card__old-price {
+                    display: block;
+                }
+
+                .card__discount-percent {
+                    max-width: 43px;
+                    justify-content: center;
+                }
+            }
+        }
+    } 
 }
